--- a/ooolink/package.json
+++ b/ooolink/package.json
@@ -9,7 +9,6 @@
     "react-native": "^0.21.0",
     "react-native-scrollable-tab-view": "^0.4.0",
     "react-redux": "^4.4.0",
-    "redux": "^3.3.1",
-    "redux-thunk": "^2.0.1"
+    "redux": "^3.3.1"
   }
 }
