--- a/ooolink/package.json
+++ b/ooolink/package.json
@@ -6,9 +6,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react-native": "^0.21.0",
+    "react-native": "^0.20.0",
     "react-native-scrollable-tab-view": "^0.4.0",
     "react-redux": "^4.4.0",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1"
   }
 }
