--- a/ooolink/package.json
+++ b/ooolink/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react-native": "^0.20.0",
+    "react-native-html-render": "^1.0.3",
     "react-native-scrollable-tab-view": "^0.4.0",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
