--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
     "koa": "~1.2.0",
     "koa-better-body": "^1.0.17",
     "koa-body": "~1.4.0",
+    "koa-ejs": "^3.0.0",
     "koa-request": "^1.0.0",
     "koa-router": "~5.4.0",
+    "koa-static": "^2.0.0",
     "mysql": "~2.10.2",
     "request": "^2.69.0",
     "sequelize": "~3.19.3"
