--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
     "gulp": "~3.9.1",
     "gulp-babel": "~6.1.2",
     "gulp-changed": "~1.3.0",
-    "gulp-nodemon": "^2.0.6"
+    "gulp-concat": "^2.6.0",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3",
+    "imagemin-pngcrush": "^4.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
