--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "gulp-nodemon": "^2.0.6"
   },
   "devDependencies": {
+    "babel-core": "^6.7.5",
+    "babel-loader": "^6.2.4",
     "babel-preset-nodejs-lts": "^1.2.1",
     "gulp": "~3.9.1",
     "gulp-babel": "~6.1.2",
@@ -20,7 +22,9 @@
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
-    "imagemin-pngcrush": "^4.1.0"
+    "gulp-webpack": "^1.5.0",
+    "imagemin-pngcrush": "^4.1.0",
+    "vue-loader": "^8.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
