--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-core": "^6.7.5",
     "babel-loader": "^6.2.4",
     "babel-preset-nodejs-lts": "^1.2.1",
+    "css-loader": "^0.23.1",
     "gulp": "~3.9.1",
     "gulp-babel": "~6.1.2",
     "gulp-changed": "~1.3.0",
@@ -24,7 +25,9 @@
     "gulp-uglify": "^1.5.3",
     "gulp-webpack": "^1.5.0",
     "imagemin-pngcrush": "^4.1.0",
-    "vue-loader": "^8.2.2"
+    "vue-html-loader": "^1.2.2",
+    "vue-loader": "^8.2.2",
+    "vue-style-loader": "^1.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
