--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "koa-request": "^1.0.0",
     "koa-router": "~5.4.0",
     "koa-static": "^2.0.0",
+    "lru-cache": "^4.0.1",
     "mysql": "~2.10.2",
     "request": "^2.69.0",
     "sequelize": "~3.19.3"
