--- a/ooolink/package.json
+++ b/ooolink/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "markdown": "^0.5.0",
     "react-native": "^0.20.0",
     "react-native-button": "^1.4.2",
     "react-native-html-render": "^1.0.3",
