--- a/server/config.json
+++ b/server/config.json
@@ -1,10 +1,10 @@
 {
   "mysql": {
     "dbname": "ooolink",
-    "host": "188.166.255.124",
+    "host": "127.0.0.1",
     "port": 3306,
     "username": "root",
-    "password": "cfc2013114"
+    "password": "dongyiweidi1"
   },
   "http": {
     "port": 3070
