--- a/server/managerConfig.json
+++ b/server/managerConfig.json
@@ -1,9 +1,9 @@
 {
   "mysql": {
     "dbname": "ooolink",
-    "host": "188.166.255.124",
+    "host": "127.0.0.1",
     "port": 3306,
     "username": "root",
-    "password": "cfc2013114"
+    "password": "dongyiweidi1"
   }
 }
