--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "feedparser": "~1.1.4",
+    "fibms-node-client": "^1.2.4",
     "koa": "~1.2.0",
     "koa-better-body": "^1.0.17",
     "koa-body": "~1.4.0",
@@ -19,6 +20,7 @@
     "koa-router": "~5.4.0",
     "koa-static": "^2.0.0",
     "lru-cache": "^4.0.1",
+    "md5": "^2.1.0",
     "mysql": "~2.10.2",
     "request": "^2.69.0",
     "sequelize": "~3.19.3"
