--- a/ooolink/package.json
+++ b/ooolink/package.json
@@ -7,12 +7,13 @@
   },
   "dependencies": {
     "markdown": "^0.5.0",
+    "react-addons-pure-render-mixin": "^15.1.0",
     "react-native": "^0.20.0",
     "react-native-button": "^1.4.2",
     "react-native-html-render": "^1.0.3",
     "react-native-scrollable-tab-view": "^0.4.0",
     "react-native-storage": "*",
-    "react-native-swiper": "^1.4.3",
+    "react-native-swiper": "^1.4.5",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1"
