--- a/ss/package.json
+++ b/ss/package.json
@@ -15,6 +15,7 @@
     "log4js": "^0.6.36",
     "md5": "^2.1.0",
     "mongoose": "^4.4.14",
+    "mongoose-text-search": "^0.0.2",
     "redis": "^2.6.0-2",
     "request": "^2.72.0"
   }
