--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-htmlmin": "^1.3.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
+    "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-nodemon": "^2.0.6",
     "gulp-notify": "^2.2.0",
