--- a/ss/package.json
+++ b/ss/package.json
@@ -16,6 +16,7 @@
     "md5": "^2.1.0",
     "mongoose": "^4.4.19",
     "mongoose-text-search": "^0.0.2",
+    "nodejieba": "^2.0.0",
     "redis": "^2.6.0-2",
     "request": "^2.72.0"
   }
