--- a/externalServices/package.json
+++ b/externalServices/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "fibms-node-client": "^1.2.4",
+    "nodemailer": "^2.4.2",
     "request": "^2.72.0"
   }
 }
