--- a/ooolink/android/app/build.gradle
+++ b/ooolink/android/app/build.gradle
@@ -119,8 +119,16 @@ android {
     }
 }
 
+repositories {
+    flatDir{
+        dirs 'libs'
+    }
+}
+
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
+    compile name:"SMSSDK-2.0.2",ext:'aar'
+    compile name:"SMSSDKGUI-2.0.2",ext:'aar'
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
