--- a/ooolink/android/app/src/main/AndroidManifest.xml
+++ b/ooolink/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <application
       android:allowBackup="true"
       android:label="@string/app_name"
+      android:name="NativeApplication"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
       <activity
@@ -18,6 +19,23 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-    </application>
+      <activity
+            android:name="com.mob.tools.MobUIShell"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="stateHidden|adjustResize"/>
 
+      <meta-data android:name="MOB_ID" android:value=""></meta-data>
+      <meta-data android:name="MOB_KEY" android:value=""></meta-data>
+
+    </application>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
