--- a/ooolink/package.json
+++ b/ooolink/package.json
@@ -16,6 +16,7 @@
     "react-native-swiper": "^1.4.5",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "validator": "^5.4.0"
   }
 }
