--- a/ss/package.json
+++ b/ss/package.json
@@ -18,6 +18,13 @@
     "mongoose-text-search": "^0.0.2",
     "nodejieba": "^2.0.0",
     "redis": "^2.6.0-2",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "koa": "~1.2.0",
+    "koa-better-body": "^1.0.17",
+    "koa-body": "~1.4.0",
+    "koa-ejs": "^3.0.0",
+    "koa-request": "^1.0.0",
+    "koa-router": "~5.4.0",
+    "koa-static": "^2.0.0"
   }
 }
